--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Datos del equipo</title>
+<meta name="viewport" content="device-width, initial-scale=1, user-scalable=no"/>
+<title>app9 Geolocalizacion</title>
+
 <!--grupo CSS-->
 <link rel="stylesheet" href="css/theme-app9.min.css"/>
 <link rel="stylesheet" href="css/jquery.mobile.icons-1.4.5.min.css"/>
@@ -12,10 +14,9 @@
 <script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/jquery.mobile-1.4.5.min.js"></script>
 <script src="js/acciones.js" type="text/javascript"></script>
-
 <script src="phonegap.js"></script><!-- necesario*/ -->
-
 </head> 
+
 <body> 
 	<div data-role="page" id="principal" data-theme="a">
     	<div data-role="header" data-position="fixed" data-tap-toggle="false">
