--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
 <script src="phonegap.js"></script><!-- necesario*/ -->
 </head> 
 
-<body> 
-	<div data-role="page" id="principal" data-theme="a">
-    	<div data-role="header" data-position="fixed" data-tap-toggle="false">
-        <h1> Geolocalizacion</h1>
-        </div>
-        
-        <div data-role="main" class="ui-content">
-        <div class="ui-btn" id="posicion"> Posicion en msg.alerta</div>
-        <div class="ui-btn" id="watch">Posicion en Movimiento(watch)</div>
-        <div>
-        <div>Latitud:<span id="latitud"></span></div>
-        <div>Longitud:<span id="longitud"></span></div>
-        <div>Altitud:<span id="altitud"></span></div>
-        <div>Accuracy:<span id="accuracy"></span></div>
-        <div>Alt. Accuracy:<span id="aaccuracy"></span></div>
-        <div>Heading:<span id="headingg"></span></div>
-        <div>Speed:<span id="speed"></span></div>
-        <div>Timestamp:<span id="timestamp"></span></div>
-       </div>
-     </div>
+<body>  
+   <div data-role="page" id="principal" data-theme="b">
+   <div data-role="header"  data-position="fixed" data-tap-toggle="false">
+   <h1>Geolocalizacion</h1>
+   </div> 
+   
+   <div data-role="main" class="ui-content">
+   <div class="ui-btn" id="posicion">Posicion es msg.alert</div>
+   <div class="ui-btn" id="watch">Posicion en Movimiento (watch)</div>
+   <div>
+     <div> Latitud:<span id="latitud"></span></div>
+     <div> Longitud:<span id="longitud"></span></div>
+     <div> Altitud:<span id="altitud"></span></div>
+     <div> Accuracy:<span id="accuracy"></span></div>
+     <div> Alt. Accuracy:<span id="aaccuracy"></span></div>
+     <div> Heading:<span id="headingg"></span></div>
+     <div> Speed:<span id="speed"></span></div>
+     <div> Timestamp:<span id="timestamp"></span></div>
+    </div>
+   </div>
     <div data-role="footer" align="center" data-theme="a" data-position="fixed">
     	<h4>Humberto Clara Gomez</h4>
         <h5> app6 GPS</h5>
